--- a/src/components/Pets/Pet/Pet.module.css
+++ b/src/components/Pets/Pet/Pet.module.css
@@ -1,5 +1,39 @@
 .Pet {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s ease;
+}
+
+/* On mouse-over, add a deeper shadow */
+.Pet:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    cursor: pointer;
+    filter: brightness(103%);
+}
+
+/* Add some padding inside the card container */
+.container {
+    padding: 2px 16px;
     display: flex;
-    flex-direction: column;
-    justify-items: center;
+    justify-content: space-between;
+}
+
+.PetAvailable{
+    background-color: #9BF6FF;
+}
+
+.PetAdopted {
+    background-color: #FFC6FF;
+}
+
+.PetImage{
+    width:100%;
+    height:100%;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+.PetImageContainer {
+    width: 20em;
+    height: 15em;
 }
