--- a/src/components/Pets/Pets.module.css
+++ b/src/components/Pets/Pets.module.css
@@ -1,3 +1,6 @@
 .Pets {
-    display: flex;
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(auto-fill, 20em);
+    justify-content: space-between;
 }
