add more filters in search

--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -12,6 +12,7 @@
 .titleImage {
     display: flex;
     flex-direction: row;
+    cursor:pointer;
     align-items: center;
     height: 6vh;
     width: auto
