--- a/src/components/Pets/Pet/Pet.module.css
+++ b/src/components/Pets/Pet/Pet.module.css
@@ -1,39 +1,52 @@
 .Pet {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s ease;
+	/* Add shadows to create the "card" effect */
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.3s ease;
+	border-radius: 6px;
 }
 
 /* On mouse-over, add a deeper shadow */
 .Pet:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    cursor: pointer;
-    filter: brightness(103%);
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+	cursor: pointer;
+	filter: brightness(103%);
 }
 
 /* Add some padding inside the card container */
 .container {
-    padding: 2px 16px;
-    display: flex;
-    justify-content: space-between;
+	padding: 2px 16px;
+	display: flex;
+	justify-content: space-between;
 }
 
-.PetAvailable{
-    background-color: #9BF6FF;
+.container h3 {
+	text-transform: uppercase;
+	font-weight: 100;
+}
+
+.container h4 {
+	font-weight: 300;
+}
+
+.PetAvailable {
+	background-color: #fff;
+	color: #988fff;
+	font-weight: lighter;
 }
 
 .PetAdopted {
-    background-color: #FFC6FF;
+	background-color: #988fff;
+	color: #fff;
 }
 
-.PetImage{
-    width:100%;
-    height:100%;
-    object-fit: cover;
-    overflow: hidden;
+.PetImage {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	overflow: hidden;
 }
 
 .PetImageContainer {
-    width: 20em;
-    height: 15em;
+	width: 20em;
+	height: 15em;
 }
