--- a/src/components/Pets/Pets.module.css
+++ b/src/components/Pets/Pets.module.css
@@ -1,6 +1,14 @@
 .Pets {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: repeat(auto-fill, 20em);
-    justify-content: space-between;
+	display: grid;
+	grid-gap: 1rem;
+	grid-template-columns: repeat(auto-fill, 20em);
+	justify-content: space-between;
+}
+
+/* generales, ver donde va */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap');
+
+body {
+	background-color: #f8f7ff;
+	font-family: 'Nunito', sans-serif;
 }
