--- a/src/components/Pets/Pets.module.css
+++ b/src/components/Pets/Pets.module.css
@@ -3,6 +3,10 @@
 /* generales, ver donde va */
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap');
 
+
+*{
+	box-sizing: border-box;
+}
 body {
 	background-color: #f8f7ff;
 	font-family: 'Nunito', sans-serif;
